--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,14 @@
+
 .header-common {
     display: flex;
     justify-content: space-between;
     padding: 1.5rem;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+
+
+    span {
+        font-weight: 800;
+    }
 
     button {
         background-color: transparent;
@@ -11,7 +18,9 @@
 
         span {
             padding-left: 1rem;
+            font-weight: 600;
         }
     }
 
 }
+
