feat: create component selected region

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="main" [ngClass]="{'bg-dark-app': _modeTheme.darkTheme}">
     <app-header />
     <app-search-home />
+    <app-selected-region />
 </div>
