feat: finalizing component countries details mock

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,16 @@
 .main {
-    height: 100vh;
+    height: 100%;
     width: 100%;
 }
 
 .bg-dark-app {
     background-color: var(--dark-mode-very-dark-blue);
+}
+
+.container-countries-details {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 1.5rem;
+    margin-top: 1rem;
 }
