--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,7 @@
     <app-header />
     <app-search-home />
     <app-selected-region />
-    <app-countries-flag />
+    <div class="container-countries-details">
+        <app-countries-flag />
+    </div>
 </div>
