--- a/src/app/components/countries-flag/countries-flag.component.scss
+++ b/src/app/components/countries-flag/countries-flag.component.scss
@@ -5,6 +5,10 @@
         width: 100%;
         border-radius: 6px;
     }
+
+    div {
+        margin-bottom: 2rem;
+    }
 }
 
 .container-details {
