feat: implementading first logic in the code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <app-header />
     <app-search-home />
     <app-selected-region />
-    <div class="container-countries-details">
+    <div #containerCountries appScrollPagination class="container-countries-details">
         <app-countries-flag />
     </div>
 </div>
