--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,11 @@
     <app-header />
     <app-search-home />
     <app-selected-region />
-    <div #containerCountries appScrollPagination class="container-countries-details">
-        <app-countries-flag />
+    <div 
+        #containerCountries 
+        appScrollPagination 
+        (reachedBottom)="countriesFlag.paginationCountries()" 
+        class="container-countries-details">
+        <app-countries-flag #countriesFlag />
     </div>
 </div>
