--- a/src/app/components/detail-countrie/detail-countrie.component.html
+++ b/src/app/components/detail-countrie/detail-countrie.component.html
@@ -1,10 +1,10 @@
 <div class="container-detail-countrie" appChangeThemeColor [themeDark]="_modeService.darkTheme">
-    <button appChangeThemeColor [themeDark]="_modeService.darkTheme">
+    <button [routerLink]="['/']" appChangeThemeColor [themeDark]="_modeService.darkTheme">
         <fa-icon [icon]="iconArrowLeft"></fa-icon>
         <span>Voltar</span>
     </button>
 
     <div>
-        
+
     </div>
 </div>
