--- a/src/app/components/detail-countrie/detail-countrie.component.html
+++ b/src/app/components/detail-countrie/detail-countrie.component.html
@@ -8,32 +8,32 @@
         <img [src]="countrie?.flag" [alt]="countrie?.name">
         <h1>{{ countrie?.name }}</h1>
         <div>
-            <p>Nome Nativo: {{ countrie?.nativeName }}</p>
-            <p>População: {{ countrie?.population }}</p>
-            <p>Região: {{ countrie?.region }}</p>
-            <p>Sub Região: {{ countrie?.subregion }}</p>
-            <p>Capital: {{ countrie?.capital }}</p>
+            <p>Nome Nativo: <span>{{ countrie?.nativeName }}</span></p>
+            <p>População: <span>{{ countrie?.population }}</span></p>
+            <p>Região: <span>{{ countrie?.region }}</span></p>
+            <p>Sub Região: <span>{{ countrie?.subregion }}</span></p>
+            <p>Capital: <span>{{ countrie?.capital }}</span></p>
         </div>
 
         <div class="sub-detail">
-            <p>Domínio de Nível Superior: {{ countrie?.topLevelDomain }}</p>
+            <p>Domínio de Nível Superior: <span>{{ countrie?.topLevelDomain }}</span></p>
             <p>Moedas: 
             <ng-container *ngFor="let currency of countrie?.currencies; let last = last;">
-                {{ currency.code }}<span *ngIf="!last">,</span>
+                <span>{{ currency.code }}<span *ngIf="!last">,</span></span>
             </ng-container>
             </p>
             <p>Línguas: 
                 <ng-container *ngFor="let language of countrie?.languages; let last = last;">
-                    {{ language.name }}<span *ngIf="!last">,</span>
+                    <span>{{ language.name }}<span *ngIf="!last">,</span></span>
                 </ng-container>
                 
             </p>
         </div>
 
         <div>
-            <p>Bordas do País: 
+            <p class="borders">Bordas do País: <span> </span>
                 <ng-container *ngFor="let border of countrie?.borders; let last = last;">
-                    {{ border }}<span *ngIf="!last">,</span>
+                    <span>{{ border }}<span *ngIf="!last">,</span></span>
                 </ng-container>
                 
             </p>
