--- a/src/app/components/countries-flag/countries-flag.component.html
+++ b/src/app/components/countries-flag/countries-flag.component.html
@@ -1,11 +1,14 @@
-<div class="container-countries-flag" appChangeThemeColor [themeDark]="_modeService.darkTheme" *ngFor="let countrie of listPagination">
-    <div (click)="navigationDetails(countrie.name)">
-        <img [src]="countrie.flag" alt={{countrie.name}}>
-        <div class="container-details">
-            <h1>{{ countrie.name }}</h1>
-            <p><strong>População:</strong> {{ countrie.population }}</p>
-            <p><strong>Região:</strong> {{ countrie.region }}</p>
-            <p><strong>Capital:</strong> {{ countrie.capital }}</p>
+
+<div class="main-countries">
+    <div class="container-countries-flag" appChangeThemeColor [themeDark]="_modeService.darkTheme" *ngFor="let countrie of listPagination">
+        <div (click)="navigationDetails(countrie.name)">
+            <img [src]="countrie.flag" alt={{countrie.name}}>
+            <div class="container-details">
+                <h1>{{ countrie.name }}</h1>
+                <p><strong>População:</strong> {{ countrie.population }}</p>
+                <p><strong>Região:</strong> {{ countrie.region }}</p>
+                <p><strong>Capital:</strong> {{ countrie.capital }}</p>
+            </div>
         </div>
     </div>
 </div>
