--- a/src/app/components/detail-countrie/detail-countrie.component.scss
+++ b/src/app/components/detail-countrie/detail-countrie.component.scss
@@ -59,3 +59,57 @@
     flex-wrap: wrap;
 
 }
+
+.bg-border {
+        border: none;
+        outline: none;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2), /* Sombra inferior */
+              0px -4px 10px rgba(0, 0, 0, 0.2), /* Sombra superior */
+              4px 0px 10px rgba(0, 0, 0, 0.2), /* Sombra direita */
+              -4px 0px 10px rgba(0, 0, 0, 0.2);
+        padding: 0.3rem;
+        margin-bottom: 0.5rem;
+}
+
+.main-details {
+    display: block;
+}
+
+
+
+@media (min-width: 1200px) {
+    .container-detail-countrie {
+        padding: 3rem;
+    }
+
+    .detail-countrie {
+        display: flex;
+
+        img {
+            height: 350px;
+            width: 500px;
+        }
+
+        .main-details {
+            display: flex;
+            padding-left: 7rem;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .sub-detail {
+            margin-top: 2rem;
+            margin-right: 6rem;
+        }
+
+        .container-detail-countrie p {
+            align-self: end;
+        }
+
+        .borders {
+            padding-left: 7rem;
+            padding-top: 4rem;
+            align-self: end;
+        }
+    }
+}
