--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,4 @@
+
 .main {
     height: 100%;
     width: 100%;
@@ -5,4 +6,8 @@
 
 .bg-dark-app {
     background-color: var(--dark-mode-very-dark-blue);
+}
+
+.bg-light-app {
+    background-color: var(--light-mode-very-light-gray);
 }
