--- a/src/theme-classes/styles.scss
+++ b/src/theme-classes/styles.scss
@@ -1,7 +1,7 @@
 // background
 
 .bg-light {
-    background-color: var(--light-mode-very-light-gray);
+    background-color: var(--light-dark-mode-white);
 }
 
 .bg-dark {
